--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,357 +1,5 @@
 databaseChangeLog:
-  - changeSet:
-      id: 1
-      author: erib
-      changes:
-        - createTable:
-            tableName: owners
-            columns:
-              - column:
-                  name: id
-                  type: bigint
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: name
-                  type: varchar(255)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: email
-                  type: varchar(255)
-              - column:
-                  name: phone
-                  type: varchar(50)
-              - column:
-                  name: address
-                  type: varchar(255)
-              - column:
-                  name: postal_code
-                  type: varchar(20)
-              - column:
-                  name: city
-                  type: varchar(100)
-              - column:
-                  name: created_at
-                  type: timestamp
-                  defaultValueDate: now()
-                  constraints:
-                    nullable: false
-              - column:
-                  name: updated_at
-                  type: timestamp
-
-        - createTable:
-            tableName: properties
-            columns:
-              - column:
-                  name: id
-                  type: bigint
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: property_designation
-                  type: varchar(255)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: share_ratio
-                  type: decimal(7,3)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: address
-                  type: varchar(255)
-              - column:
-                  name: owner_id
-                  type: bigint
-                  constraints:
-                    foreignKeyName: fk_property_owner
-                    references: owners(id)
-              - column:
-                  name: created_at
-                  type: timestamp
-                  defaultValueDate: now()
-                  constraints:
-                    nullable: false
-              - column:
-                  name: updated_at
-                  type: timestamp
-
-        - createTable:
-            tableName: users
-            columns:
-              - column:
-                  name: id
-                  type: bigint
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: username
-                  type: varchar(100)
-                  constraints:
-                    nullable: false
-                    unique: true
-              - column:
-                  name: email
-                  type: varchar(255)
-                  constraints:
-                    nullable: false
-                    unique: true
-              - column:
-                  name: password
-                  type: varchar(255)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: first_name
-                  type: varchar(100)
-              - column:
-                  name: last_name
-                  type: varchar(100)
-              - column:
-                  name: enabled
-                  type: boolean
-                  defaultValueBoolean: true
-                  constraints:
-                    nullable: false
-              - column:
-                  name: last_login
-                  type: timestamp
-              - column:
-                  name: created_at
-                  type: timestamp
-                  defaultValueDate: now()
-                  constraints:
-                    nullable: false
-              - column:
-                  name: updated_at
-                  type: timestamp
-
-        - createTable:
-            tableName: user_roles
-            columns:
-              - column:
-                  name: user_id
-                  type: bigint
-                  constraints:
-                    nullable: false
-                    foreignKeyName: fk_user_role_user
-                    references: users(id)
-              - column:
-                  name: role
-                  type: varchar(50)
-                  constraints:
-                    nullable: false
-
-        - addPrimaryKey:
-            tableName: user_roles
-            columnNames: user_id, role
-            constraintName: pk_user_roles
-
-        - createTable:
-            tableName: billings
-            columns:
-              - column:
-                  name: id
-                  type: bigint
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: year
-                  type: int
-                  constraints:
-                    nullable: false
-              - column:
-                  name: description
-                  type: varchar(255)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: total_amount
-                  type: decimal(10,2)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: extra_charge
-                  type: decimal(10,2)
-                  defaultValueNumeric: 0.00
-              - column:
-                  name: issue_date
-                  type: date
-                  constraints:
-                    nullable: false
-              - column:
-                  name: due_date
-                  type: date
-                  constraints:
-                    nullable: false
-              - column:
-                  name: type
-                  type: varchar(50)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: created_at
-                  type: timestamp
-                  defaultValueDate: now()
-                  constraints:
-                    nullable: false
-              - column:
-                  name: updated_at
-                  type: timestamp
-
-        - createTable:
-            tableName: invoices
-            columns:
-              - column:
-                  name: id
-                  type: bigint
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: billing_id
-                  type: bigint
-                  constraints:
-                    nullable: false
-                    foreignKeyName: fk_invoice_billing
-                    references: billings(id)
-              - column:
-                  name: property_id
-                  type: bigint
-                  constraints:
-                    nullable: false
-                    foreignKeyName: fk_invoice_property
-                    references: properties(id)
-              - column:
-                  name: amount
-                  type: decimal(10,2)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: due_date
-                  type: date
-                  constraints:
-                    nullable: false
-              - column:
-                  name: invoice_number
-                  type: varchar(50)
-                  constraints:
-                    nullable: false
-                    unique: true
-              - column:
-                  name: ocr_number
-                  type: varchar(50)
-                  constraints:
-                    nullable: false
-                    unique: true
-              - column:
-                  name: status
-                  type: varchar(50)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: created_at
-                  type: timestamp
-                  defaultValueDate: now()
-                  constraints:
-                    nullable: false
-              - column:
-                  name: updated_at
-                  type: timestamp
-
-        - createTable:
-            tableName: payments
-            columns:
-              - column:
-                  name: id
-                  type: bigint
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: invoice_id
-                  type: bigint
-                  constraints:
-                    nullable: false
-                    foreignKeyName: fk_payment_invoice
-                    references: invoices(id)
-              - column:
-                  name: amount
-                  type: decimal(10,2)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: payment_date
-                  type: date
-                  constraints:
-                    nullable: false
-              - column:
-                  name: comment
-                  type: varchar(255)
-              - column:
-                  name: payment_type
-                  type: varchar(50)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: created_at
-                  type: timestamp
-                  defaultValueDate: now()
-                  constraints:
-                    nullable: false
-              - column:
-                  name: updated_at
-                  type: timestamp
-
-        - createIndex:
-            indexName: idx_property_designation
-            tableName: properties
-            columns:
-              - column:
-                  name: property_designation
-
-        - createIndex:
-            indexName: idx_owner_name
-            tableName: owners
-            columns:
-              - column:
-                  name: name
-
-        - createIndex:
-            indexName: idx_invoice_ocr
-            tableName: invoices
-            columns:
-              - column:
-                  name: ocr_number
-
-        - createIndex:
-            indexName: idx_invoice_number
-            tableName: invoices
-            columns:
-              - column:
-                  name: invoice_number
-
-        - createIndex:
-            indexName: idx_billing_year
-            tableName: billings
-            columns:
-              - column:
-                  name: year
-
-  # Include the new changesets
   - include:
-      file: db/changelog/changes/02-multiple-owners-per-property.yaml
+      file: classpath:db/changelog/changes/001-initial-schema.yaml
   - include:
-      file: db/changelog/changes/03-import-owners-properties.yaml
+      file: classpath:db/changelog/changes/002-add-association-table.yaml
