--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.7",
     "vue": "^3.5.13",
     "vuetify": "^3.8.5",
+    "date-fns": "^4.1.0",
     "pinia": "^2.1.7"
   },
   "devDependencies": {
