--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -13,11 +13,12 @@
   "dependencies": {
     "@fontsource/roboto": "5.2.5",
     "@mdi/font": "7.4.47",
+    "@vueuse/core": "^13.2.0",
     "axios": "^1.6.7",
-    "vue": "^3.5.13",
-    "vuetify": "^3.8.5",
     "date-fns": "^4.1.0",
-    "pinia": "^2.1.7"
+    "pinia": "^2.1.7",
+    "vue": "^3.5.13",
+    "vuetify": "^3.8.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
