--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -9,3 +9,5 @@ databaseChangeLog:
       file: classpath:db/changelog/changes/03-import-owners-properties.yaml
   - include:
       file: classpath:db/changelog/changes/003-add-apelgarden-data.yaml
+  - include:
+      file: classpath:db/changelog/changes/004-add-admin-users.yaml
