--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -8,7 +8,8 @@
     "serve": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
     "@fontsource/roboto": "5.2.5",
@@ -18,6 +19,7 @@
     "date-fns": "^4.1.0",
     "pinia": "^2.1.7",
     "vue": "^3.5.13",
+    "vue-pdf-embed": "^2.1.2",
     "vuetify": "^3.8.5"
   },
   "devDependencies": {
