--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -16,6 +16,7 @@
     "@mdi/font": "7.4.47",
     "@vueuse/core": "^13.2.0",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.0",
     "date-fns": "^4.1.0",
     "pinia": "^2.1.7",
     "vue": "^3.5.13",
