--- a/src/main/resources/db/changelog/changes/003-add-apelgarden-data.yaml
+++ b/src/main/resources/db/changelog/changes/003-add-apelgarden-data.yaml
@@ -18,10 +18,10 @@ databaseChangeLog:
                   value: "76454-8"
               - column:
                   name: email
-                  value: "billerby@gmail.com"
+                  value: "charlotte.hemvik@outlook.com"
               - column:
                   name: phone
-                  value: "46730825065"
+                  value: "46707773010"
               - column:
                   name: created_at
                   valueDate: "CURRENT_TIMESTAMP"
