--- a/src/main/resources/db/changelog/changes/03-import-owners-properties.yaml
+++ b/src/main/resources/db/changelog/changes/03-import-owners-properties.yaml
@@ -18,44 +18,44 @@ databaseChangeLog:
             sql: |
               INSERT INTO owners (name, email, phone, address, postal_code, city, created_at) VALUES 
               ('Anders Collin', 'anders.collin@gmail.com', '46736844130', 'SE', NULL, NULL, now()),
-              ('Anders Drefeldt', 'anders@drefeldt.se', '732680875', 'Råslätt Skår 1', '516 95', 'Målsryd', now()),
-              ('Anders Östberg', 'andersraggan@gmail.com', '070-7219419', 'Fölvägen 32', '425 41', 'Hisings Kärra', now()),
+              ('Anders Drefeldt', 'anders@drefeldt.se', '46732680875', 'Råslätt Skår 1', '516 95', 'Målsryd', now()),
+              ('Anders Östberg', 'andersraggan@gmail.com', '46707219419', 'Fölvägen 32', '425 41', 'Hisings Kärra', now()),
               ('Arne Jørgen Olafsen', 'ajolafsen@gmail.com', NULL, NULL, NULL, NULL, now()),
               ('Bertel Enlund', 'bertel.enlund@gmail.com', '031-298244', 'Arkivgatan 5', '411 34', 'Göteborg', now()),
-              ('Birgitta Liljeqvist', 'mikael@liljeqvistdesign.com', '076-8677601', '28 Heimdalsgatan', '261 62', 'GLUMSLÖV', now()),
+              ('Birgitta Liljeqvist', 'mikael@liljeqvistdesign.com', '46768677601', '28 Heimdalsgatan', '261 62', 'GLUMSLÖV', now()),
               ('Birgitta Palm', NULL, NULL, 'Solskiftesvägen 4', '451 62', 'Uddevalla', now()),
-              ('Birgitta Wastler', 'birgitta_wastler@hotmail.com', '070-5778769', 'Åkersbergsvägen 13', '461 34', 'TROLLHÄTTAN', now()),
-              ('Bo Eek', 'bo.eek@svenskakyrkan.se', '0709-243174', '3 Övre Fogelbergsgatan', '411 28', 'GÖTEBORG', now()),
+              ('Birgitta Wastler', 'birgitta_wastler@hotmail.com', '46705778769', 'Åkersbergsvägen 13', '461 34', 'TROLLHÄTTAN', now()),
+              ('Bo Eek', 'bo.eek@svenskakyrkan.se', '46709243174', '3 Övre Fogelbergsgatan', '411 28', 'GÖTEBORG', now()),
               ('Britt Månsson', 'brittmansson123@gmail.com', '031-829271', 'Thorild Wulffsgatan 60', '413 19', 'GÖTEBORG', now()),
               ('Carolina Nilsson', 'carolina@hpboende.se', NULL, NULL, NULL, NULL, now()),
-              ('Claes Mangelus', 'claesmangelus@hotmail.com', '031-193013', 'Lunnatorpsgatan 12', '412 74', 'GÖTEBORG', now()),
-              ('Elna Holmberg', 'elna.holmberg@gmail.com', '072-3526119', NULL, NULL, NULL, now()),
-              ('Erik Billerby', 'billerby@gmail.com', '0730-825065', 'Kärnvedsgatan 16', '416 80', 'Göteborg', now()),
+              ('Claes Mangelus', 'claesmangelus@hotmail.com', '46738193013', 'Lunnatorpsgatan 12', '412 74', 'GÖTEBORG', now()),
+              ('Elna Holmberg', 'elna.holmberg@gmail.com', '46723526119', NULL, NULL, NULL, now()),
+              ('Erik Billerby', 'billerby@gmail.com', '46730825065', 'Kärnvedsgatan 16', '416 80', 'Göteborg', now()),
               ('Eva Norberg', 'dan.norberg@telia.com', '0521-10207', 'Hästskovägen 19', '462 54', 'VÄNERSBORG', now()),
               ('Gösta Mellgren', 'gostamellgren@gmail.com', '031-215331', 'Doktor Lindhs Gata 4', '413 25', 'Göteborg', now()),
-              ('Gunnar Törnbom', 'gunnar.tornbom@gmail.com', NULL, NULL, NULL, NULL, now()),
+              ('Gunnar Törnbom', 'gunnar.tornbom@gmail.com', '46790687477', NULL, NULL, NULL, now()),
               ('Henrik Hagberg', 'henrik.hagberg@obgyn.gu.se', NULL, NULL, NULL, NULL, now()),
-              ('Inger Eriksson', 'klamman62@gmail.com', '070-1480240', 'Hvitfeldtsvägen 16', '371 33', 'Skärhamn', now()),
-              ('Ingvar Olemyr', 'igolemyr@gmail.com', '070-1510733', '7 Terrassgatan', '411 33', 'GÖTEBORG', now()),
+              ('Inger Eriksson', 'klamman62@gmail.com', '46701480240', 'Hvitfeldtsvägen 16', '371 33', 'Skärhamn', now()),
+              ('Ingvar Olemyr', 'igolemyr@gmail.com', '46701510733', '7 Terrassgatan', '411 33', 'GÖTEBORG', now()),
               ('Jan Bengtsson', 'jan@bengtsson.net', '46707832130', '18 Askims Urbergsväg', '436 40', 'Askim', now()),
-              ('Jonas Lundberg', 'jonas@dalabygg.eu', '0707-45 45 98', 'Dälavägen 57', '437 36', 'Lindome', now()),
+              ('Jonas Lundberg', 'jonas@dalabygg.eu', '46707454598', 'Dälavägen 57', '437 36', 'Lindome', now()),
               ('Kerstin Malm-Tronstad', 'kerstin.tronstad@icloud.com', NULL, NULL, NULL, NULL, now()),
               ('Lene Schack', 'lene.schack@akzonobel.com', NULL, NULL, NULL, NULL, now()),
               ('Linda Bruce', 'linda.bruce1@hotmail.com', NULL, NULL, NULL, NULL, now()),
               ('Lisa Collin', 'lois.collin@gmail.com', '46705681482', NULL, NULL, NULL, now()),
-              ('Lisbet Lefdal', 'lisbet.lefdal@outlook.com', '0702-111315', '25 Sten Sturegatan', '412 52', 'GÖTEBORG', now()),
-              ('Charlotte Hemvik', 'charlotte.hemvik@outlook.com', '0707-773010', NULL, NULL, NULL, now()),
+              ('Lisbet Lefdal', 'lisbet.lefdal@outlook.com', '46702111315', '25 Sten Sturegatan', '412 52', 'GÖTEBORG', now()),
+              ('Charlotte Hemvik', 'charlotte.hemvik@outlook.com', '46707773010', NULL, NULL, NULL, now()),
               ('Magnus Nilsson', 'magnus.nilsson@ncc.se', NULL, NULL, NULL, NULL, now()),
-              ('Mari Wemminger', 'mari@wemminger.se', '0709-54 27 54', 'Torpe Gränd, lgh 1501', '442 47', 'Kungälv', now()),
-              ('Per Arnell', 'per.arnell@saltwater.se', '073-4456129', 'Landshövdingevägen 11', '433 61', 'SÄVEDALEN', now()),
-              ('Per Eskilson', 'per@eskilson.nu', '070-5726202', 'Björkhällan 7', '436 39', 'Askim', now()),
+              ('Mari Wemminger', 'mari@wemminger.se', '46709542754', 'Torpe Gränd, lgh 1501', '442 47', 'Kungälv', now()),
+              ('Per Arnell', 'per.arnell@saltwater.se', '46734456129', 'Landshövdingevägen 11', '433 61', 'SÄVEDALEN', now()),
+              ('Per Eskilson', 'per@eskilson.nu', '46705726202', 'Björkhällan 7', '436 39', 'Askim', now()),
               ('Per Svending', 'per.svending@gmail.com', NULL, '12 Bokvägen', '442 31', 'Kungälv', now()),
               ('Per Thorén', 'thoren.per@gmail.com', '0304-666158', 'Gökskullavägen 34', '433 30', 'Öjersjö', now()),
               ('Pernilla Johansson', 'PernillaMJohansson@hotmail.com', NULL, NULL, NULL, NULL, now()),
-              ('Ragnar Bronäs', 'ragnar@bronas.se', '070-598-4546', 'Mjörn Apelgården 81', '471 73', 'Hjälteby', now()),
-              ('Reidun Liljeros', 'reidunviola@gmail.com', '070-5528960', 'Ingetorp 164 B', '442 96', 'KODE', now()),
-              ('Sigurd Walldal', 'sigurdwalldal@gmail.com', '0304-666365', 'Skårsgatan 36', '412 69', 'GÖTEBORG', now()),
-              ('Tony Johansson', 'tony.1963.johansson@hotmail.com', NULL, NULL, NULL, NULL, now()),
+              ('Ragnar Bronäs', 'ragnar@bronas.se', '46705984546', 'Mjörn Apelgården 81', '471 73', 'Hjälteby', now()),
+              ('Reidun Liljeros', 'reidunviola@gmail.com', '46705528960', 'Ingetorp 164 B', '442 96', 'KODE', now()),
+              ('Sigurd Walldal', 'sigurdwalldal@gmail.com', '46708272945', 'Skårsgatan 36', '412 69', 'GÖTEBORG', now()),
+              ('Tony Johansson', 'tony.1963.johansson@hotmail.com', '46705369842', NULL, NULL, NULL, now()),
               ('Elinor Bylynd', NULL, NULL, NULL, NULL, NULL, now());
 
         # Store owner ids in temporary table
