--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,9 +41,9 @@ spring.mail.host=${SPRING_MAIL_HOST:email-smtp.us-east-1.amazonaws.com}
 spring.mail.port=${SPRING_MAIL_PORT:587}
 spring.mail.username=${SPRING_MAIL_USERNAME:defaultusername}
 spring.mail.password=${SPRING_MAIL_PASSWORD:defaultpassword}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=${SPRING_MAIL_AUTH:true}
+spring.mail.properties.mail.smtp.starttls.enable=${SPRING_MAIL_STARTTLS:true}
+spring.mail.properties.mail.smtp.starttls.required=${SPRING_MAIL_STARTTLS_REQUIRED:true}
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
