--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,8 +50,11 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 
 # Email Settings
 mail.fromAddress=${MAIL_FROM_ADDRESS:billerby@gmail.com}
-mail.subject=${MAIL_SUBJECT:Faktura frï¿½n Apelgï¿½rdens vï¿½gsamfï¿½llighet}
+mail.subject=${MAIL_SUBJECT:Faktura från Apelgårdens vägsamfällighet}
 
 # Badtemperatur
 badtemperatur.api.url=https://eu1.cloud.thethings.network/api/v3/as/applications/badtemperatur-application/devices/eui-a840411f8182f655/packages/storage/uplink_message?limit=1&order=-received_at
-badtemperatur.token=${BADTEMPERATUR_TOKEN:Bearer NNSXS.S76DJLOII6MM3KN5BNKCXADEAFGWIMUVGYQT6JQ.ZEFBXQFCBYD4MXEARMXMW3KSSY4CEALSWU355DG22OTSRPK4T6VA}
+badtemperatur.token=${BADTEMPERATUR_TOKEN:Bearer default.token}
+
+# Webhook Security (Simple)
+roadvault.webhook.apikey=${ROADVAULT_WEBHOOK_APIKEY:defaultapikey}
