--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -24,3 +24,6 @@ spring.mail.password=test
 # Badtemperatur
 badtemperatur.api.url=https://eu1.cloud.thethings.network/api/v3/as/applications/badtemperatur-application/devices/eui-a840411f8182f655/packages/storage/uplink_message?limit=1&order=-received_at
 badtemperatur.token=token
+
+# Webhook Security (Simple)
+roadvault.webhook.apikey=${ROADVAULT_WEBHOOK_APIKEY:defaultapikey}
